--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,19 @@
     <div class="username">
         <input type="text" class="username-input">
     </div>
-    <div class="role">
-        <span>
-            <input type="radio" id="admin" name="role" value="admin">
-            <label for="admin">Admin</label>
-        </span>
-        <span>
-            <input type="radio" id="player" name="role" value="player">
-            <label for="player">Player</label>
-        </span>
-    </div>
-    <button id="join">JOIN!</button>
+    <form action="">
+        <div class="role">
+            <span>
+                <input type="radio" id="admin" name="role" value="admin">
+                <label for="admin">Admin</label>
+            </span>
+            <span>
+                <input type="radio" id="player" name="role" value="player">
+                <label for="player">Player</label>
+            </span>
+        </div>
+        <button id="join">JOIN!</button>
+    </form>
 </body>
 
 </html>
