--- a/public/admin.html
+++ b/public/admin.html
@@ -13,6 +13,8 @@
     <div id="game">
         <div id="canvas"></div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 
 </html>
