--- a/public/player.html
+++ b/public/player.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Scribble It</h1>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/player.js"></script>
 </body>
 
 </html>
