--- a/public/admin.html
+++ b/public/admin.html
@@ -37,6 +37,7 @@
             <div id="xlarge"></div>
         </button>
     </div>
+    <div id="scoreboard"></div>
     <div id="chat">
         <div id="chatbox">
             <ul id="chatlist"></ul>
