--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 <label for="admin">Admin</label>
             </span>
             <span>
-                <input type="radio" id="player" name="role" value="player">
+                <input type="radio" id="player" name="role" value="player" checked>
                 <label for="player">Player</label>
             </span>
         </div>
