--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/game.css">
     <title>Game (Admin)</title>
 </head>
 
@@ -52,6 +52,12 @@
         <button id="xlarge" class="strokeWidth">
             <div id="xlarge"></div>
         </button>
+    </div>
+    <div id="setting">
+        <form id="round-setting">
+            <input id="round-number" type="number">
+            <button id="start">START!</button>
+        </form>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js"
         integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
