Add rounds track

--- a/public/admin.html
+++ b/public/admin.html
@@ -13,7 +13,7 @@
     <div id="topbar">
         <div id="clock"></div>
         <div id="round"></div>
-        <div id="word">_________</div>
+        <div id="word"></div>
     </div>
     <div class="container">
         <div id="scoreboard"></div>
