--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/game.css">
     <title>Game (Admin)</title>
 </head>
@@ -26,7 +27,7 @@
                 <ul id="chatlist"></ul>
             </div>
             <form id="form">
-                <input id="input" type="text">
+                <input id="input" type="text" placeholder="Type your guess here...">
             </form>
         </div>
     </div>
