--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h1>Scribble It</h1>
     <form action="/game" method="POST">
         <div class="username">
-            <input type="text" class="username-input" name="username" required>
+            <input type="text" class="username-input" name="username" placeholder="Enter your name" required>
         </div>
         <div class="role">
             <span>
